# SafeSdk

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/ollvmmodule/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  raw_syscall.cpp  raw_syscall.h
app/src/main/cpp/sign/: CheckSign.cpp  CheckSign.h
app/src/main/cpp/utils/: Base64Utils.cpp  Base64Utils.h
app/src/main/java/com/example/ollvmmodule/: MainActivity.java
app/src/main/java/com/example/ollvmmodule/util/: Md5ExUtils.java  SignUtils.java  SignatureUtil.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/ollvmmodule/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
safekernel/: build.gradle.kts
safekernel/src/main/cpp/: CMakeLists.txt  Log.h  SafeKernel.cpp  SafeKernel.h  main.cpp  native-lib.cpp  syscall64.s
safekernel/src/main/cpp/jsoncpp/src/lib_json/: json_writer.cpp
safekernel/src/main/cpp/sign/: CheckSign.cpp  CheckSign.h
safekernel/src/main/cpp/utils/: ApkUtils.cpp  ApkUtils.h  MD5Utils.cpp  MD5Utils.h
safekernel/src/main/java/com/example/safekernel/: Api.java  SafeHelper.java
safekernel/src/main/java/com/qa/test/: DebugApi.java  DeviceHelper.java
